--- a/content/assets/cyclone-slider-pro/templates/standard/style.css
+++ b/content/assets/cyclone-slider-pro/templates/standard/style.css
@@ -194,7 +194,6 @@
 }
 
 #sliderRow {
-	margin-top: 30px;
 	background:#F1F1F1;
 	border-bottom:1px solid #ddd;
 	min-height:320px;
